# ffmpeg-cpp

./: .gitignore  CMakeLists.txt
ffmpeg/: CMakeLists.txt
src/: CMakeLists.txt  ConvertedAudioProcessor.h  FFmpegException.cpp  FFmpegException.h  ffmpeg.h  ffmpegcpp.h
src/Codecs/: H264Codec.cpp  H264Codec.h
src/Demuxing/: AudioInputStream.h  InputStream.h  VideoInputStream.h
src/FrameSinks/: AudioEncoder.h  AudioFrameSink.h  FrameSink.h  FrameSinkStream.h  FrameWriter.h  VideoEncoder.h
src/Muxing/: OutputStream.h
src/Sources/: Demuxer.cpp  EncodedFileSource.h  RawAudioDataSource.h  RawVideoDataSource.h
swig/: CMakeLists.txt  ffmpeg-cpp.i  swig.patch
tests/: CMakeLists.txt
tests/decode_audio/: decode_audio.cpp
tests/decode_video/: decode_video.cpp
tests/demo/: demo.cpp
tests/difference/: difference.cpp
tests/encode_audio/: encode_audio.cpp
tests/encode_video/: encode_video.cpp
tests/filtering_audio/: filtering_audio.cpp
tests/filtering_video/: filtering_video.cpp
tests/print_info/: print_info.cpp
tests/remuxing/: remuxing.cpp
tests/simple_interface/: SimpleInterface.cpp  SimpleInterface.h  example.cpp
tests/wrapper_js/: decode_audio.js  decode_video.js  encode_audio.js  encode_video.js  print_info.js
tests/wrapper_python/: decode_audio.py  encode_audio.py  encode_video.py  print_info.py
